<resources>
    <string name="app_name">Lesson1</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_0">0</string>
    <string name="_point">.</string>
    <string name="_plus">+</string>
    <string name="_minus">-</string>
    <string name="_multiply">*</string>
    <string name="_divide">÷</string>
    <string name="_clear">c</string>
    <string name="_equal">=</string>
    <string name="my_cool_style">My cool style</string>
    <string name="material_light">Material light</string>
    <string name="material_light_action_bar_dark">Material bar dark</string>
    <string name="material_dark">Material dark</string>
    <string name="_return">return</string>
    <string name="account">setting</string>
    <string name="Apply">apply</string>t
</resources>